--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,56 +1,66 @@
-@font-face{
+@font-face {
     font-family: 'Roboto', sans-serif;
-    src: url(https://fonts.gstatic.com/s/roboto/v27/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
-    font-weight   : normal;
-	font-style    : normal;
-	font-weight   : 16px;
+    src        : url(https://fonts.gstatic.com/s/roboto/v27/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
+    font-weight: normal;
+    font-style : normal;
+    font-weight: 16px;
 }
 
-@font-face{
-    font-family: 'Shrinkhand', serif;
-    src: url(https://fonts.gstatic.com/s/shrikhand/v6/a8IbNovtLWfR7T7bMJwrGIKR4zg.woff2) format('woff2');
-    font-weight   : normal;
-	font-style    : normal;
-	font-weight   : 16px;
+
+@font-face {
+    font-family  : 'Shrikhand';
+    font-style   : normal;
+    font-weight  : 400;
+    font-display : swap;
+    src          : url(https://fonts.gstatic.com/s/shrikhand/v6/a8IbNovtLWfR7T7bMJwrA4KR.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-p{
+p {
     font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
-    margin: 0px;
+    font-size  : 1rem;
+    margin     : 0px;
 }
 
-h1{
+h1 {
     font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
-    margin: 0px;
+    font-size  : 1rem;
+    margin     : 0px;
 }
 
-h2{
+h2 {
+    font-family: 'Shrikhand', serif;
+    font-size  : 1.6em;
+    margin     : 0px;
+    font-weight: normal;
+    width      : 85%;
+    max-width  : 870px;
+    height     : 35px;
+}
+
+h3 {
     font-family: 'Roboto', sans-serif;
-    font-size: 1.6em;
-    margin: 0px;
+    font-size  : 1.1em;
+    margin     : 0px;
     font-weight: bold;
-    width: 85%;
-    max-width: 870px;
-    height: 35px;
 }
 
-h3{
+h5 {
+    font-family  : 'Shrikhand', serif;
+    font-style   : oblique;
+    font-size    : 1.5em;
+    font-weight  : 100;
+    margin-bottom: 1em;
+    font-stretch : 150%;
+    /**ne marche pas**/
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.mail {
     font-family: 'Roboto', sans-serif;
-    font-size: 1.1em;
-    margin: 0px;
-    font-weight: bold;
-}
-
-h5{
-    font-family: 'Shrinkhand', serif;
-    font-style: oblique;
-    font-size: 1.5em;
-    font-weight: 900;
-    margin: 1em 0;
-    font-stretch: ultra-expanded;
-}
-.bold{
-    font-weight: bold;
+    font-size  : 1rem;
+    margin     : 0px;
 }
