--- a/sass/main.scss
+++ b/sass/main.scss
@@ -193,6 +193,7 @@ button {
 #restaurant {
     width           : 100%;
     background-color: $grey-city;
+    padding-top     : 1.5rem;
 }
 
 .resto {
@@ -204,41 +205,137 @@ button {
     align-content  : center;
     justify-content: center;
     margin         : auto;
-    
+
+    a {
+        height: 18em;
+        
+        &:hover{
+            img{
+                box-shadow: #26394da2 2px 14px 14px -10px;
+                transition: 0.3s;
+            }
+        }
+    }
+
 }
 
 .resto img {
-    width     : 335px;
-    max-width : 335px;
-    height    : 251px;
-    max-height: 251px;
-    object-fit: cover;
+    width        : 335px;
+    max-width    : 335px;
+    height       : 251px;
+    max-height   : 251px;
+    object-fit   : cover;
     border-radius: 1em;
-    margin: 1em;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    margin       : 1em;
+    box-shadow      : #26394da2 0px 9px 11px -10px;
 }
 
 .cartouche {
-    height: 77px;
-    width: 335px;
-    position: relative;
-    top: -96px;
-    left: 1.0em;
+    height          : 77px;
+    width           : 335px;
+    position        : relative;
+    top             : -96px;
+    left            : 1.0em;
     background-color: white;
-    border-radius: 0 0 1em 1em;
-    display: flex;
-    color: black;
-    justify-content: space-around;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: flex-start;
+    border-radius   : 0 0 1em 1em;
+    display         : flex;
+    color           : black;
+    justify-content : space-around;
+    flex-direction  : column;
+    flex-wrap       : nowrap;
+    align-items     : flex-start;
+
+    .favorite-checkbox {
+        position : absolute;
+        right    : 1em;
+        font-size: 1.5em;
+    }
+    .fas {
+        position               : relative;
+        font-size              : 1em;
+        padding                : 0px;
+        background             : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
+        background-clip        : border-box;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-shadow            : none;
+    }
+
+    .favorite-checkbox input,
+    .favorite-checkbox .checked {
+        display: none;
+    }
+
+    .favorite-checkbox input:checked~.checked {
+        display: inline-block;
+    }
+
+    .favorite-checkbox input:checked~.unchecked {
+        display: none;
+    }
+
+    // span {
+    //     position : absolute;
+    //     right    : 1em;
+    //     font-size: 1.5em;
+
+    //     .fas {
+    //         position   : relative;
+    //         font-size  : 1em;
+    //         padding    : 0px;
+    //         color      : white;
+    //         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
+    //         &:hover,
+    //         &:focus {
+    //             background             : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
+    //             background-clip        : border-box;
+    //             -webkit-background-clip: text;
+    //             -webkit-text-fill-color: transparent;
+    //             text-shadow: none;
+
+    //         }
+    //     }
+    // }
 }
+
+//         &:hover {
+//             .far:hover {
+//                 display: none;
+//                 z-index: 1;
+//                 .fas .fas{
+//                     display: block;
+//                     z-index: 5;
+//                 }
+//             }
+
+//         }
+//     }
+// }
+
+// color     : rgb(255, 121, 218);
+// background: linear-gradient(145deg, rgba(255, 121, 218, 1) 0%, rgba(147, 86, 220, 1) 100%);
+
+
+// .fas.fa-heart::before
+
+// .fas.fa-heart::before {
+//     font-family: "Font Awesome 5 Free";
+
+//     content            : "\f004";
+//     color              : white;
+//     border-image-outset: 1px solid black;
+
+// }
+
 .cartouche p {
     padding-left: 1em;
 }
+
 a {
     text-decoration: none;
-} 
+}
+
 
 
 @import "./layouts/footer";
