--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,10 @@ img {
 }
 
 @font-face {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto";
   src: url(https://fonts.gstatic.com/s/roboto/v27/KFOmCnqEu92Fr1Mu4mxK.woff2) format("woff2");
   font-weight: normal;
   font-style: normal;
-  font-weight: 16px;
 }
 @font-face {
   font-family: "Shrikhand";
@@ -36,7 +35,6 @@ img {
   font-weight: 400;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/shrikhand/v6/a8IbNovtLWfR7T7bMJwrA4KR.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 p {
   font-family: "Roboto", sans-serif;
@@ -45,8 +43,8 @@ p {
 }
 
 h1 {
-  font-family: "Roboto", sans-serif;
-  font-size: 1rem;
+  font-family: "Shrikhand", serif;
+  font-size: 2.3rem;
   margin: 0px;
 }
 
@@ -67,6 +65,12 @@ h3 {
   font-weight: bold;
 }
 
+h4 {
+  font-family: "Shrikhand", serif;
+  font-size: 1.6em;
+  margin-bottom: 0.8em;
+}
+
 h5 {
   font-family: "Shrikhand", serif;
   font-style: oblique;
@@ -77,6 +81,11 @@ h5 {
   /**ne marche pas**/
 }
 
+h6 {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.1em;
+}
+
 .bold {
   font-weight: bold;
 }
@@ -85,11 +94,6 @@ h5 {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   margin: 0px;
-}
-
-html {
-  max-width: 100%;
-  margin: auto;
 }
 
 header {
@@ -107,17 +111,18 @@ header {
   align-items: center;
 }
 
-.arrow {
+header .arrow {
   position: absolute;
   left: 2rem;
   top: 1.4rem;
   display: block;
+  color: black;
+  font-size: 1.5em;
 }
 
-header img {
-  width: 9rem;
-  box-sizing: content-box;
-  object-fit: cover;
+html {
+  max-width: 100%;
+  margin: auto;
 }
 
 .geo {
@@ -145,7 +150,7 @@ header img {
   font-weight: bold;
 }
 
-form {
+.form_reserv {
   height: 287px;
   background-color: #f6f6f6;
   display: flex;
@@ -277,10 +282,10 @@ button:hover {
   justify-content: center;
   margin: auto;
 }
-.resto a {
+.resto__card {
   height: 18em;
 }
-.resto a:hover img {
+.resto__card:hover img {
   box-shadow: #26394da2 2px 14px 14px -10px;
   transition: 0.3s;
 }
@@ -301,7 +306,7 @@ button:hover {
   width: 335px;
   position: relative;
   top: -96px;
-  left: 1em;
+  left: 0.9em;
   background-color: white;
   border-radius: 0 0 1em 1em;
   display: flex;
@@ -316,7 +321,8 @@ button:hover {
   right: 1em;
   font-size: 1.5em;
 }
-.cartouche .fas {
+
+.fas {
   position: relative;
   font-size: 1em;
   padding: 0px;
@@ -326,14 +332,17 @@ button:hover {
   -webkit-text-fill-color: transparent;
   text-shadow: none;
 }
-.cartouche .favorite-checkbox input,
-.cartouche .favorite-checkbox .checked {
+
+.favorite-checkbox input,
+.favorite-checkbox .checked {
   display: none;
 }
-.cartouche .favorite-checkbox input:checked ~ .checked {
+
+.favorite-checkbox input:checked ~ .checked {
   display: inline-block;
 }
-.cartouche .favorite-checkbox input:checked ~ .unchecked {
+
+.favorite-checkbox input:checked ~ .unchecked {
   display: none;
 }
 
@@ -343,6 +352,63 @@ button:hover {
 
 a {
   text-decoration: none;
+}
+
+.main_div {
+  width: 100%;
+  max-width: 768px;
+  margin: 0 auto;
+  border-radius: 2.5em 2.5em 0 0;
+  margin-top: -1em;
+  background-color: #ebebeb;
+  padding-top: 2em;
+  position: relative;
+  top: -2.6em;
+}
+
+.titre_img {
+  margin: 0 auto;
+  display: block;
+  max-width: 1024px;
+  height: 260px;
+  object-fit: cover;
+}
+
+.resto_titre_img {
+  width: 100%;
+  max-width: 100%;
+  object-fit: cover;
+  height: 240px;
+  top: 4rem;
+}
+
+section {
+  padding: 1rem 0.7rem;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.1em;
+}
+
+.carte {
+  width: 100%;
+  height: 70px;
+  background-color: white;
+  border-radius: 1em;
+  margin: 1em auto;
+  padding: 0.5em 1em;
+}
+
+.condiment {
+  display: inline-block;
+  font-size: 0.9em;
+}
+
+.box__menu {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 0.4em;
 }
 
 footer {
