--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -31,7 +31,7 @@ h2 {
     font-size  : 1.6em;
     margin     : 0px;
     font-weight: normal;
-    width      : 85%;
+    // width      : 85%;
     max-width  : 870px;
     height     : 35px;
 }
@@ -53,8 +53,7 @@ h5 {
     font-size    : 1.5em;
     font-weight  : 100;
     margin-bottom: 1em;
-    font-stretch : 150%;
-    /**ne marche pas**/
+    
 }
 
 h6 {
