--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
-
 @import "./abstracts/variables";
 @import "./base/reset";
 @import "./base/typography";
 @import "./layouts/header.scss";
+@import "./components/buttons";
 // @import "node_modules/scss/fontawesome.scss"
 
 
@@ -36,9 +36,13 @@ html {
 .bold {
     font-size  : 1em;
     font-weight: bold;
-
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-
+ .prix {
+     font-weight: bold;
+ }
 .form_reserv {
     height          : 287px;
     background-color: #f6f6f6;
@@ -170,7 +174,9 @@ button {
     background-color: $grey-city;
     padding-top     : 1.5rem;
 }
-
+.shrik{
+    margin: auto;
+}
 .resto {
     width          : 85%;
     max-width      : 870px;
@@ -180,37 +186,25 @@ button {
     align-content  : center;
     justify-content: center;
     margin         : auto;
-
-    &__card {
-        height: 18em;
-        
-        &:hover{
-            img{
-                box-shadow: #26394da2 2px 14px 14px -10px;
-                transition: 0.3s;
-            }
-        }
-    }
-
 }
 
 .resto img {
-    width        : 335px;
-    max-width    : 335px;
-    height       : 251px;
-    max-height   : 251px;
-    object-fit   : cover;
+    width: 335px;
+    max-width: 335px;
+    height: 251px;
+    max-height: 251px;
+    object-fit: cover;
     border-radius: 1em;
-    margin       : 1em;
-    box-shadow      : #26394da2 0px 9px 11px -10px;
+    margin: 1em;
+    box-shadow: rgb(38 57 77 / 64%) 0px 9px 13px -3px;
 }
 
 .cartouche {
     height          : 77px;
     width           : 335px;
     position        : relative;
-    top             : -96px;
-    left            : 0.9em;
+    top             : -92px;
+    left            : 16px;
     background-color: white;
     border-radius   : 0 0 1em 1em;
     display         : flex;
@@ -221,23 +215,58 @@ button {
     align-items     : flex-start;
 
     .favorite-checkbox {
+
         position : absolute;
-        right    : 1em;
+        left     : 290px;
+        top      : 25px;
         font-size: 1.5em;
+
+        .fas {
+            padding                : 0px;
+            background             : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
+            background-clip        : border-box;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow            : none;
+        }
+
+        @media (min-width: 1024px) {
+            &:hover {
+                background             : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
+                background-clip        : border-box;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                text-shadow            : none;
+            }
+        }
     }
-    
 }
-    
-.fas {
-    position               : relative;
-    font-size              : 1em;
-    padding                : 0px;
-    background             : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
-    background-clip        : border-box;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow            : none;
+
+.favorite-checkbox {
+    .fas {
+        position               : relative;
+        font-size              : 1em;
+        padding                : 0px;
+        background             : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
+        background-clip        : border-box;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-shadow            : none;
+
+    }
+
+    @media (min-width: 1024px) {
+        &:hover {
+            padding                : 0px;
+            background             : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
+            background-clip        : border-box;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow            : none;
+        }
+    }
 }
+
 
 .favorite-checkbox input,
 .favorite-checkbox .checked {
@@ -251,22 +280,6 @@ button {
 .favorite-checkbox input:checked~.unchecked {
     display: none;
 }
-    
-    //         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
-    //         &:hover,
-    //         &:focus {
-    //             background             : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
-    //             background-clip        : border-box;
-    //             -webkit-background-clip: text;
-    //             -webkit-text-fill-color: transparent;
-    //             text-shadow: none;
-
-    //         }
-    //     }
-    // }
-
-
 
 .cartouche p {
     padding-left: 1em;
@@ -275,64 +288,81 @@ button {
 a {
     text-decoration: none;
 }
-.main_div{
-    width: 100%;
-    max-width: 768px;
-    margin: 0 auto;
-    border-radius: 2.5em 2.5em 0 0;
-    margin-top: -1em;
+
+.main_div {
+    width           : 100%;
+    max-width       : 768px;
+    margin          : 0 auto;
+    border-radius   : 2.5em 2.5em 0 0;
+    margin-top      : -1em;
     background-color: $grey-city;
-    padding-top: 2em ;
-    position: relative;
-    top: -2.6em;
+    padding-top     : 2em;
+    position        : relative;
+    top             : -2.6em;
 }
- .titre_img{
-    margin: 0 auto;
-    display: block;
-    max-width: 1024px;
-    height: 260px;
+
+.titre_img {
+    margin    : 0 auto;
+    display   : block;
+    max-width : 1024px;
+    height    : 260px;
     object-fit: cover;
 }
-.resto_titre_img{
-    width: 100%;
-    max-width: 100%;
+
+.resto_titre_img {
+    width     : 100%;
+    max-width : 100%;
     object-fit: cover;
-    height: 240px;
-    top: 4rem;
+    height    : 240px;
+    top       : 4rem;
 }
-section{
-    padding: 1rem 0.7rem;
+
+section {
+    padding    : 1rem 0.7rem;
     font-family: 'Roboto', sans-serif;
-    font-size: 1.1em;
+    font-size  : 1.1em;
 }
+
 .carte {
-    width: 100%;
-    height: 70px;
+    width           : 100%;
+    height          : 70px;
     background-color: white;
-    border-radius: 1em;
-    margin: 1em auto;
-    padding: 0.5em 1em;
+    border-radius   : 1em;
+    margin          : 1em auto;
+    padding         : 0.5em 1em;
 }
-.condiment{
-    display: inline-block;
+
+.condiment {
+    display  : inline-block;
     font-size: 0.9em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
+
 .box__menu {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
+    display        : flex;
+    flex-wrap      : nowrap;
+    flex-direction : row;
     justify-content: space-between;
-    align-items: flex-end;
-    margin-top: 0.4em;
+    align-items    : flex-end;
+    margin-top     : 0.4em;
 }
 
-// .form-check{
-//     position: relative;
-// }
-// .form-check input{
-//     position: absolute;
-//     opacity: 0;
-// }
+.titre_coeur {
+    display        : flex;
+    flex-direction : row;
+    flex-wrap      : nowrap;
+    align-content  : center;
+    align-items    : center;
+    justify-content: space-between;
 
+    .favorite-checkbox {
+        font-size     : 1.5em;
+        padding-bottom: 11px;
+        padding-right : 10px;
+    }
+}
 
 @import "./layouts/footer";
