--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -4,3 +4,23 @@
     background-color: $tertiary-color;
     margin-top: 9px;
 }
+
+button {
+    width        : 220px;
+    height       : 50px;
+    border-radius: 3em;
+    border       : none;
+    color        : white;
+    font-size    : 1em;
+    background   : linear-gradient(to bottom right, #FF79DA, #9356DC);
+    box-shadow   : #26394d 0px 9px 9px -10px;
+    transition   : 00.2s;
+
+    &:hover {
+        z-index   : 5;
+        width     : 225px;
+        font-size : 1.02em;
+        box-shadow: #26394d 2px 12px 12px -10px;
+        opacity   : 0.9;
+    }
+}
