--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,4 +6,4 @@ $grey-city        : #ebebeb;
 $darken-grey-city : darken (#ebebeb, 80%);
 $fa-font-path     : "../webfonts" !default;
 
-$card-shadow      : box-shadow rgb(38 57 77 / 64%) 0px 9px 13px -3px;
+// $card-shadow      : box-shadow #26394da2 0px 9px 11px -10px;
