correctif lien pages html & font store

--- a/css/style.css
+++ b/css/style.css
@@ -264,9 +264,12 @@ html {
 .list::before {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
-  content: "\f0ca";
+  content: "\f54e";
   padding-right: 1.5em;
+  padding-top: 0.5em;
   color: #858585;
+  padding-bottom: 0.5em;
+  padding-left: 0.5em;
 }
 
 .store::before {
