--- a/sass/main.scss
+++ b/sass/main.scss
@@ -106,15 +106,15 @@ html {
     }
 
     & .dot {
-        position        : absolute;
-        left            : -0.7em;
-        height          : 25px;
-        width           : 25px;
-        color           : white;
+        position: absolute;
+        left: -0.7em;
+        height: 25px;
+        width: 25px;
+        color: white;
         background-color: #9356DC;
-        border-radius   : 1em;
-        padding-left    : 0.55em;
-        padding-top     : 0.25em;
+        border-radius: 1em;
+        padding-left: 0.45em;
+        padding-top: 0.19em;
     }
 }
 
@@ -135,12 +135,12 @@ html {
 .list::before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
-    content: "\f54e";
+    content: "\f0ca";
     padding-right: 1.5em;
     padding-top: 0.5em;
-    color: #858585;
-    padding-bottom: 0.5em;
-    padding-left: 0.5em;
+    color        : darken($grey-city, 40%);
+    // padding-bottom: 0.5em;
+    // padding-left: 0.5em;
 }
 
 .store::before {
@@ -149,6 +149,7 @@ html {
     content      : "\f54e";
     padding-right: 1.5em;
     color        : darken($grey-city, 40%);
+    display: inline-block;
 }
 
 #restaurant {
