maj test icon index

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -148,8 +148,7 @@ html {
     font-weight  : 900;
     content      : "\f54e";
     padding-right: 1.5em;
-    color        : darken($grey-city, 40%);
-    display: inline-block;
+    color        : #858585;
 }
 
 #restaurant {
