--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,134 @@ header .arrow {
   font-size: 1.5em;
 }
 
+.lds-spinner {
+  color: #FF79DA;
+  /* display: inline-block; */
+  position: relative;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 16em;
+  z-index: 1000;
+  animation-iteration-count: 4;
+}
+
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+  animation-iteration-count: 3;
+}
+
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: #fcf;
+}
+
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
+.loading {
+  position: fixed;
+  z-index: -1;
+  background-color: black;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  animation: spinner-out 1s linear;
+  animation-iteration-count: 1;
+  cursor: wait;
+}
+
+@keyframes spinner-out {
+  0% {
+    z-index: 100;
+    opacity: 0.8;
+  }
+  90% {
+    z-index: 100;
+    opacity: 0.8;
+  }
+  100% {
+    display: none;
+  }
+}
 .trait_vert {
   height: 3px;
   width: 40px;
@@ -346,18 +474,21 @@ html {
   text-shadow: none;
   transition-property: transform;
   transition-duration: 3s;
+  opacity: 1;
 }
 .favorite-checkbox .fas:active {
   transform: scale(2);
 }
 @media (min-width: 1024px) {
-  .favorite-checkbox:hover {
+  .favorite-checkbox:hover, .favorite-checkbox:focus {
     padding: 0px;
     background: linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
     background-clip: border-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: none;
+    transform: scale(1.1);
+    opacity: 1;
   }
 }
 
@@ -432,7 +563,6 @@ section {
   height: 70px;
   right: 0%;
   top: 0%;
-  transform: translate;
   transition: all 0.4s ease-out;
   width: 0%;
 }
